added 06_02 fix to rename_events.py

--- a/m_06_02.ipynb
+++ b/m_06_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "abc290bf",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IMPORTED MODULES today: 2023-07-10 21:15:30.836380\n"
+      "IMPORTED MODULES today: 2023-07-14 23:52:29.480134\n"
      ]
     }
    ],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "061e20c2",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8d5439c2",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,21 @@
       "  [375] Keeping  (2023-05-18 11:12:45.515782+00:00 - 2023-05-18 11:12:45.515782+00:00 -> 646.147 - 646.147)\n",
       "  [376] Keeping  (2023-05-18 11:12:45.615782+00:00 - 2023-05-18 11:12:45.615782+00:00 -> 646.247 - 646.247)\n",
       "  [377] Keeping  (2023-05-18 11:12:47.495782+00:00 - 2023-05-18 11:12:47.495782+00:00 -> 648.127 - 648.127)\n",
-      "  [378] Keeping  (2023-05-18 11:12:48.995782+00:00 - 2023-05-18 11:12:48.995782+00:00 -> 649.627 - 649.627)\n"
+      "  [378] Keeping  (2023-05-18 11:12:48.995782+00:00 - 2023-05-18 11:12:48.995782+00:00 -> 649.627 - 649.627)\n",
+      "  [379] Keeping  (2023-05-18 11:12:52.535782+00:00 - 2023-05-18 11:12:52.535782+00:00 -> 653.167 - 653.167)\n",
+      "  [380] Keeping  (2023-05-18 11:12:52.635782+00:00 - 2023-05-18 11:12:52.635782+00:00 -> 653.267 - 653.267)\n",
+      "  [381] Keeping  (2023-05-18 11:12:53.995782+00:00 - 2023-05-18 11:12:53.995782+00:00 -> 654.627 - 654.627)\n",
+      "  [382] Keeping  (2023-05-18 11:12:55.495782+00:00 - 2023-05-18 11:12:55.495782+00:00 -> 656.127 - 656.127)\n",
+      "  [383] Keeping  (2023-05-18 11:12:58.165782+00:00 - 2023-05-18 11:12:58.165782+00:00 -> 658.797 - 658.797)\n",
+      "  [384] Keeping  (2023-05-18 11:12:58.265782+00:00 - 2023-05-18 11:12:58.265782+00:00 -> 658.897 - 658.897)\n",
+      "  [385] Keeping  (2023-05-18 11:13:00.495782+00:00 - 2023-05-18 11:13:00.495782+00:00 -> 661.127 - 661.127)\n",
+      "  [386] Keeping  (2023-05-18 11:13:01.995782+00:00 - 2023-05-18 11:13:01.995782+00:00 -> 662.627 - 662.627)\n",
+      "  [387] Keeping  (2023-05-18 11:13:05.095782+00:00 - 2023-05-18 11:13:05.095782+00:00 -> 665.727 - 665.727)\n",
+      "  [388] Keeping  (2023-05-18 11:13:05.195782+00:00 - 2023-05-18 11:13:05.195782+00:00 -> 665.827 - 665.827)\n",
+      "  [389] Keeping  (2023-05-18 11:13:06.995782+00:00 - 2023-05-18 11:13:06.995782+00:00 -> 667.627 - 667.627)\n",
+      "  [390] Keeping  (2023-05-18 11:13:08.495782+00:00 - 2023-05-18 11:13:08.495782+00:00 -> 669.127 - 669.127)\n",
+      "  [391] Keeping  (2023-05-18 11:13:11.025782+00:00 - 2023-05-18 11:13:11.025782+00:00 -> 671.657 - 671.657)\n",
+      "  [392] Keeping  (2023-05-18 11:13:11.125782+00:00 - 2023-05-18 11:13:11.125782+00:00 -> 671.757 - 671.757)\n"
      ]
     },
     {
@@ -916,20 +930,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  [379] Keeping  (2023-05-18 11:12:52.535782+00:00 - 2023-05-18 11:12:52.535782+00:00 -> 653.167 - 653.167)\n",
-      "  [380] Keeping  (2023-05-18 11:12:52.635782+00:00 - 2023-05-18 11:12:52.635782+00:00 -> 653.267 - 653.267)\n",
-      "  [381] Keeping  (2023-05-18 11:12:53.995782+00:00 - 2023-05-18 11:12:53.995782+00:00 -> 654.627 - 654.627)\n",
-      "  [382] Keeping  (2023-05-18 11:12:55.495782+00:00 - 2023-05-18 11:12:55.495782+00:00 -> 656.127 - 656.127)\n",
-      "  [383] Keeping  (2023-05-18 11:12:58.165782+00:00 - 2023-05-18 11:12:58.165782+00:00 -> 658.797 - 658.797)\n",
-      "  [384] Keeping  (2023-05-18 11:12:58.265782+00:00 - 2023-05-18 11:12:58.265782+00:00 -> 658.897 - 658.897)\n",
-      "  [385] Keeping  (2023-05-18 11:13:00.495782+00:00 - 2023-05-18 11:13:00.495782+00:00 -> 661.127 - 661.127)\n",
-      "  [386] Keeping  (2023-05-18 11:13:01.995782+00:00 - 2023-05-18 11:13:01.995782+00:00 -> 662.627 - 662.627)\n",
-      "  [387] Keeping  (2023-05-18 11:13:05.095782+00:00 - 2023-05-18 11:13:05.095782+00:00 -> 665.727 - 665.727)\n",
-      "  [388] Keeping  (2023-05-18 11:13:05.195782+00:00 - 2023-05-18 11:13:05.195782+00:00 -> 665.827 - 665.827)\n",
-      "  [389] Keeping  (2023-05-18 11:13:06.995782+00:00 - 2023-05-18 11:13:06.995782+00:00 -> 667.627 - 667.627)\n",
-      "  [390] Keeping  (2023-05-18 11:13:08.495782+00:00 - 2023-05-18 11:13:08.495782+00:00 -> 669.127 - 669.127)\n",
-      "  [391] Keeping  (2023-05-18 11:13:11.025782+00:00 - 2023-05-18 11:13:11.025782+00:00 -> 671.657 - 671.657)\n",
-      "  [392] Keeping  (2023-05-18 11:13:11.125782+00:00 - 2023-05-18 11:13:11.125782+00:00 -> 671.757 - 671.757)\n",
       "  [393] Keeping  (2023-05-18 11:13:13.495782+00:00 - 2023-05-18 11:13:13.495782+00:00 -> 674.127 - 674.127)\n",
       "  [394] Keeping  (2023-05-18 11:13:14.995782+00:00 - 2023-05-18 11:13:14.995782+00:00 -> 675.627 - 675.627)\n",
       "  [395] Keeping  (2023-05-18 11:13:18.395782+00:00 - 2023-05-18 11:13:18.395782+00:00 -> 679.027 - 679.027)\n",
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "7a874b32",
    "metadata": {},
    "outputs": [],
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "c55bb7fb",
    "metadata": {},
    "outputs": [
@@ -1386,23 +1386,7 @@
       "Found '2a' in file: m_06_02/06_2a_posner_task_2023-05-18_10h59.43.934/06_2a_posner_task_2023-05-18_10h59.43.934.csv\n",
       "Found '2b' in file: m_06_02/06_2b_posner_task_2023-05-18_12h04.59.098/06_2b_posner_task_2023-05-18_12h04.59.098.csv\n",
       "********** 2b\n",
-      "Used Annotations descriptions: ['New Segment/', 'Stimulus/S 10', 'Stimulus/S 20', 'Stimulus/S 30', 'Stimulus/S 40', 'Stimulus/S 50', 'Stimulus/S 51', 'Stimulus/S 60', 'Stimulus/S 70', 'Stimulus/S 80', 'Stimulus/S101', 'Stimulus/S109', 'Stimulus/S117']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
-      "['ECG']\n",
-      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
-      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Used Annotations descriptions: ['New Segment/', 'Stimulus/S 10', 'Stimulus/S 20', 'Stimulus/S 30', 'Stimulus/S 40', 'Stimulus/S 50', 'Stimulus/S 51', 'Stimulus/S 60', 'Stimulus/S 70', 'Stimulus/S 80', 'Stimulus/S101', 'Stimulus/S109', 'Stimulus/S117']\n",
       "len(events) 426\n",
       "len(validity) 100\n",
       "# of stim events 102\n",
@@ -1835,15 +1819,33 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/babe/src/gla/dissertation/go/rename_events.py:50: RuntimeWarning: Not setting position of 1 misc channel found in montage:\n",
+      "['ECG']\n",
+      "Consider setting the channel types to be of EEG/sEEG/ECoG/DBS/fNIRS using inst.set_channel_types before calling inst.set_montage, or omit these channels when creating your montage.\n",
+      "  raw = mne.io.read_raw_brainvision(vhdr_file, preload=True, verbose=0)\n"
+     ]
+    },
+    {
      "ename": "IndexError",
      "evalue": "index 100 is out of bounds for axis 0 with size 100",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Relabel stim events and load raw data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m raw_b \u001b[39m=\u001b[39m relabel_events(session_id, posner_id_b)\n",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Relabel stim events and load raw data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m raw_b \u001b[39m=\u001b[39m relabel_events(session_id, posner_id_b)\n",
       "File \u001b[0;32m~/src/gla/dissertation/go/rename_events.py:99\u001b[0m, in \u001b[0;36mrelabel_events\u001b[0;34m(session_id, pos_id)\u001b[0m\n\u001b[1;32m     97\u001b[0m     events[i][\u001b[39m2\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m52\u001b[39m\n\u001b[1;32m     98\u001b[0m \u001b[39mif\u001b[39;00m(code\u001b[39m==\u001b[39m\u001b[39m50\u001b[39m):\n\u001b[0;32m---> 99\u001b[0m     \u001b[39mif\u001b[39;00m validity[idx]\u001b[39m==\u001b[39m\u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m    100\u001b[0m         \u001b[39m# Give code 51 if valid\u001b[39;00m\n\u001b[1;32m    101\u001b[0m         events[i][\u001b[39m2\u001b[39m]\u001b[39m=\u001b[39m\u001b[39m51\u001b[39m\n\u001b[1;32m    102\u001b[0m     idx\u001b[39m+\u001b[39m\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\n",
       "\u001b[0;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 100"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
